--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "es6-template-strings": "^2.0.1",
+    "full-icu": "1.3.0",
     "minimist": "^1.2.0",
     "puppeteer": "^2.0.0"
   }
