--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "full-icu": "1.3.0",
     "minimist": "^1.2.0",
     "puppeteer": "^2.0.0"
+  },
+  "bin": {
+    "invoice": "./cli.js"
   }
 }
