--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-invoicer",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "cli to genarate simple invoices from html template",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,10 @@
   ],
   "author": "janouma",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/janouma/html-invoicer.git"
+  },
   "dependencies": {
     "es6-template-strings": "^2.0.1",
     "full-icu": "1.3.0",
