--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "html-invoicer",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "cli to genarate simple invoices from html template",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "^12.14.1",
+    "npm": "^6.13.7"
   },
   "keywords": [
     "invoice",
